--- a/Automation/Automation.App/Views/WorkPages/Tasks/Instances/TaskInstanceSummary.xaml
+++ b/Automation/Automation.App/Views/WorkPages/Tasks/Instances/TaskInstanceSummary.xaml
@@ -16,8 +16,12 @@
             <ColumnDefinition />
         </Grid.ColumnDefinitions>
 
-        <StackPanel Orientation="Vertical">
-            <packagesComponents:TargetPackageSummary TargetPackage="{Binding Target}" />
+        <packagesComponents:TargetPackageSummary TargetPackage="{Binding Target}" />
+
+        <StackPanel
+            Orientation="Vertical"
+            Grid.Column="1"
+            Margin="4,0,0,0">
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="120" />
@@ -25,6 +29,7 @@
                 </Grid.ColumnDefinitions>
 
                 <Grid.RowDefinitions>
+                    <RowDefinition />
                     <RowDefinition />
                     <RowDefinition />
                 </Grid.RowDefinitions>
@@ -38,70 +43,71 @@
                     Grid.Row="1"
                     Text="{Binding CreateDate}" />
 
+                <TextBlock FontWeight="Bold" Grid.Row="2">Status</TextBlock>
+                <StackPanel
+                    Orientation="Horizontal"
+                    Grid.Row="2"
+                    Grid.Column="1">
+                    <ContentControl
+                        ContentTemplate="{DynamicResource {x:Static adonisUi:Templates.LoadingBars}}"
+                        Foreground="{DynamicResource {x:Static adonisUi:Brushes.ForegroundBrush}}"
+                        Width="24"
+                        Height="24"
+                        Focusable="False">
+                        <ContentControl.Style>
+                            <Style TargetType="ContentControl">
+                                <Setter Property="Visibility" Value="Collapsed" />
+                                <Style.Triggers>
+                                    <DataTrigger Binding="{Binding State}" Value="Pending">
+                                        <Setter Property="Visibility" Value="Visible" />
+                                    </DataTrigger>
+                                    <DataTrigger Binding="{Binding State}" Value="Progress">
+                                        <Setter Property="Visibility" Value="Visible" />
+                                    </DataTrigger>
+                                </Style.Triggers>
+                            </Style>
+                        </ContentControl.Style>
+                    </ContentControl>
+
+                    <fonts:Icon>
+                        <fonts:Icon.Style>
+                            <Style TargetType="{x:Type fonts:Icon}" BasedOn="{StaticResource {x:Type fonts:Icon}}">
+                                <Style.Triggers>
+                                    <DataTrigger Binding="{Binding State}" Value="Completed">
+                                        <Setter Property="Text" Value="{x:Static fonts:IconFont.CircleCheck}" />
+                                        <Setter Property="Foreground" Value="{DynamicResource {x:Static adonisUi:Brushes.SuccessBrush}}" />
+                                    </DataTrigger>
+                                    <DataTrigger Binding="{Binding State}" Value="Failed">
+                                        <Setter Property="Text" Value="{x:Static fonts:IconFont.CircleExclamation}" />
+                                        <Setter Property="Foreground" Value="{DynamicResource {x:Static adonisUi:Brushes.AlertBrush}}" />
+                                    </DataTrigger>
+                                </Style.Triggers>
+                            </Style>
+                        </fonts:Icon.Style>
+                    </fonts:Icon>
+
+                    <TextBlock VerticalAlignment="Center" Margin="4,0,0,0">
+                        <TextBlock.Style>
+                            <Style TargetType="TextBlock">
+                                <Style.Triggers>
+                                    <DataTrigger Binding="{Binding State}" Value="Pending">
+                                        <Setter Property="Text" Value="Pending ..." />
+                                    </DataTrigger>
+                                    <DataTrigger Binding="{Binding State}" Value="Progress">
+                                        <Setter Property="Text" Value="Progressing ..." />
+                                    </DataTrigger>
+                                    <DataTrigger Binding="{Binding State}" Value="Completed">
+                                        <Setter Property="Text" Value="Completed" />
+                                    </DataTrigger>
+                                    <DataTrigger Binding="{Binding State}" Value="Failed">
+                                        <Setter Property="Text" Value="Failed" />
+                                    </DataTrigger>
+                                </Style.Triggers>
+                            </Style>
+                        </TextBlock.Style>
+                    </TextBlock>
+                </StackPanel>
             </Grid>
-        </StackPanel>
-        <StackPanel
-            Orientation="Horizontal"
-            HorizontalAlignment="Center"
-            Grid.Column="1">
-            <ContentControl
-                ContentTemplate="{DynamicResource {x:Static adonisUi:Templates.LoadingBars}}"
-                Foreground="{DynamicResource {x:Static adonisUi:Brushes.ForegroundBrush}}"
-                Width="24"
-                Height="24"
-                Focusable="False">
-                <ContentControl.Style>
-                    <Style TargetType="ContentControl">
-                        <Setter Property="Visibility" Value="Collapsed" />
-                        <Style.Triggers>
-                            <DataTrigger Binding="{Binding State}" Value="Pending">
-                                <Setter Property="Visibility" Value="Visible" />
-                            </DataTrigger>
-                            <DataTrigger Binding="{Binding State}" Value="Progress">
-                                <Setter Property="Visibility" Value="Visible" />
-                            </DataTrigger>
-                        </Style.Triggers>
-                    </Style>
-                </ContentControl.Style>
-            </ContentControl>
-
-            <fonts:Icon>
-                <fonts:Icon.Style>
-                    <Style TargetType="{x:Type fonts:Icon}" BasedOn="{StaticResource {x:Type fonts:Icon}}">
-                        <Style.Triggers>
-                            <DataTrigger Binding="{Binding State}" Value="Completed">
-                                <Setter Property="Text" Value="{x:Static fonts:IconFont.CircleCheck}" />
-                                <Setter Property="Foreground" Value="{DynamicResource {x:Static adonisUi:Brushes.SuccessBrush}}" />
-                            </DataTrigger>
-                            <DataTrigger Binding="{Binding State}" Value="Failed">
-                                <Setter Property="Text" Value="{x:Static fonts:IconFont.CircleExclamation}" />
-                                <Setter Property="Foreground" Value="{DynamicResource {x:Static adonisUi:Brushes.AlertBrush}}" />
-                            </DataTrigger>
-                        </Style.Triggers>
-                    </Style>
-                </fonts:Icon.Style>
-            </fonts:Icon>
-
-            <TextBlock VerticalAlignment="Center">
-                <TextBlock.Style>
-                    <Style TargetType="TextBlock">
-                        <Style.Triggers>
-                            <DataTrigger Binding="{Binding State}" Value="Pending">
-                                <Setter Property="Text" Value="Pending ..." />
-                            </DataTrigger>
-                            <DataTrigger Binding="{Binding State}" Value="Progress">
-                                <Setter Property="Text" Value="Progressing ..." />
-                            </DataTrigger>
-                            <DataTrigger Binding="{Binding State}" Value="Completed">
-                                <Setter Property="Text" Value="Completed" />
-                            </DataTrigger>
-                            <DataTrigger Binding="{Binding State}" Value="Failed">
-                                <Setter Property="Text" Value="Failed" />
-                            </DataTrigger>
-                        </Style.Triggers>
-                    </Style>
-                </TextBlock.Style>
-            </TextBlock>
         </StackPanel>
     </Grid>
 </UserControl>
