--- a/Automation/Automation.App/Views/WorkPages/Tasks/Instances/TaskProgressionModal.xaml
+++ b/Automation/Automation.App/Views/WorkPages/Tasks/Instances/TaskProgressionModal.xaml
@@ -8,18 +8,21 @@
     xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
     xmlns:fonts="clr-namespace:Joufflu.Shared.Resources.Fonts;assembly=Joufflu.Shared"
     mc:Ignorable="d"
-    d:DesignHeight="450"
-    d:DesignWidth="800"
+    Height="400"
+    Width="600"
     x:Name="ParentContainer">
-    <Grid DataContext="{Binding ElementName=ParentContainer}">
+    <Grid DataContext="{Binding ElementName=ParentContainer}" Margin="2">
         <Grid.RowDefinitions>
             <RowDefinition Height="auto" />
             <RowDefinition />
         </Grid.RowDefinitions>
 
-        <local:TaskInstanceSummary Instance="{Binding Instance}" Margin="2" />
+        <local:TaskInstanceSummary Instance="{Binding Instance}" />
 
-        <DataGrid Grid.Row="1" ItemsSource="{Binding ProgressMessages}">
+        <DataGrid
+            Grid.Row="1"
+            ItemsSource="{Binding ProgressMessages}"
+            Margin="0,2,0,0">
             <DataGrid.Columns>
                 <DataGridTemplateColumn Header="Type">
                     <DataGridTemplateColumn.CellTemplate>
