Display scope history

--- a/Automation/Automation.App/Views/WorkPages/Scopes/ScopePage.xaml
+++ b/Automation/Automation.App/Views/WorkPages/Scopes/ScopePage.xaml
@@ -28,9 +28,10 @@
                 <TabItem.Header>
                     <StackPanel Orientation="Horizontal">
                         <fonts:Icon Text="{x:Static fonts:IconFont.Clock}" />
-                        <TextBlock Margin="4,0,0,0">History</TextBlock>
+                        <TextBlock Margin="4,0,0,0">Execution History</TextBlock>
                     </StackPanel>
                 </TabItem.Header>
+                <local:ScopeHistory Scope="{Binding Scope}" />
             </TabItem>
         </TabControl>
 
