--- a/Automation/Automation.App/Views/WorkPages/Scopes/ScopeHistory.xaml
+++ b/Automation/Automation.App/Views/WorkPages/Scopes/ScopeHistory.xaml
@@ -1,38 +1,31 @@
 ﻿<UserControl
-    x:Class="Automation.App.Views.WorkPages.Tasks.Instances.TaskHistory"
+    x:Class="Automation.App.Views.WorkPages.Scopes.ScopeHistory"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:Automation.App.Views.WorkPages.Tasks.Instances"
+    xmlns:local="clr-namespace:Automation.App.Views.WorkPages.Scopes"
+    mc:Ignorable="d"
+    d:DesignHeight="450"
+    d:DesignWidth="800"
     xmlns:instances="clr-namespace:Automation.App.Views.WorkPages.Tasks.Instances"
     xmlns:fonts="clr-namespace:Joufflu.Shared.Resources.Fonts;assembly=Joufflu.Shared"
     xmlns:data="clr-namespace:Joufflu.Data;assembly=Joufflu.Data">
-    <Grid DataContext="{Binding Instances, RelativeSource={RelativeSource AncestorType=local:TaskHistory}}">
+    <Grid DataContext="{Binding Instances, RelativeSource={RelativeSource AncestorType=local:ScopeHistory}}">
         <Grid.RowDefinitions>
-            <RowDefinition Height="auto" />
             <RowDefinition />
             <RowDefinition Height="auto" />
         </Grid.RowDefinitions>
-
-        <Grid HorizontalAlignment="Right">
-            <Button Click="ButtonExecute_Click">
-                <StackPanel Orientation="Horizontal">
-                    <fonts:Icon Text="{x:Static fonts:IconFont.Play}" VerticalAlignment="Center" />
-                    <TextBlock Margin="4,0,0,0">Execute new</TextBlock>
-                </StackPanel>
-            </Button>
-        </Grid>
-
         <instances:TaskInstanceList
             Margin="0,2,0,0"
-            Grid.Row="1"
+            Grid.Row="0"
             Instances="{Binding Data}" />
+
         <data:Paging
+            Grid.Row="1"
             x:Name="InstancesPaging"
             PagingChange="InstancesPaging_PagingChange"
-            Margin="0,2,0,0"
-            Grid.Row="2"
+            Margin="10,0,0,0"
             PageNumber="{Binding Page}"
             Capacity="{Binding PageSize}"
             Total="{Binding Total}" />
