--- a/Automation/Automation.App/Views/WorkPages/Tasks/TaskPage.xaml
+++ b/Automation/Automation.App/Views/WorkPages/Tasks/TaskPage.xaml
@@ -29,7 +29,7 @@
                             <TextBlock Margin="4,0,0,0">Executions history</TextBlock>
                         </StackPanel>
                     </TabItem.Header>
-                    <instances:TaskHistory Task="{Binding Task}" />
+                    <local:TaskHistory Task="{Binding Task}" />
                 </TabItem>
             </TabControl>
 
