--- a/Automation/Automation.App/Views/WorkPages/Scopes/Components/ScopedSelector.xaml
+++ b/Automation/Automation.App/Views/WorkPages/Scopes/Components/ScopedSelector.xaml
@@ -10,7 +10,7 @@
     xmlns:components="clr-namespace:Automation.App.Views.WorkPages.Components"
     xmlns:fonts="clr-namespace:Joufflu.Shared.Resources.Fonts;assembly=Joufflu.Shared"
     mc:Ignorable="d">
-    <Grid>
+    <Grid DataContext="{Binding RelativeSource={RelativeSource AncestorType={x:Type local:ScopedSelector}}}">
         <Grid.RowDefinitions>
             <RowDefinition Height="auto" />
             <RowDefinition />
@@ -34,7 +34,7 @@
                 ToolTip="Add new"
                 Tag="{Binding RelativeSource={RelativeSource AncestorType=local:ScopedSelector}}">
                 <Button.ContextMenu>
-                    <local:ScopedContextMenu RootScope="{Binding RootScope}" Selected="{Binding Selected}" />
+                    <local:ScopedContextMenu CurrentScope="{Binding CurrentScope}" Selected="{Binding Selected}" />
                 </Button.ContextMenu>
                 <fonts:Icon Text="{x:Static fonts:IconFont.Plus}" />
             </Button>
@@ -42,7 +42,6 @@
 
         <TreeView
             Grid.Row="1"
-            DataContext="{Binding RelativeSource={RelativeSource AncestorType={x:Type local:ScopedSelector}}}"
             Background="{DynamicResource {x:Static adonisUi:Brushes.Layer1BackgroundBrush}}"
             MinWidth="200"
             ItemsSource="{Binding RootScope.SortedChildrens}"
@@ -50,7 +49,7 @@
             SelectedItemChanged="TreeView_SelectedItemChanged"
             Tag="{Binding RelativeSource={RelativeSource AncestorType=local:ScopedSelector}}">
             <TreeView.ContextMenu>
-                <local:ScopedContextMenu RootScope="{Binding RootScope}" Selected="{Binding Selected}" />
+                <local:ScopedContextMenu CurrentScope="{Binding RootScope}" Selected="{Binding Selected}" />
             </TreeView.ContextMenu>
             <TreeView.ItemContainerStyle>
                 <Style TargetType="{x:Type TreeViewItem}" BasedOn="{StaticResource TreeViewItemStyle}">
