--- a/Automation/Automation.App/Views/WorkPages/Workflows/WorkflowEditModal.xaml
+++ b/Automation/Automation.App/Views/WorkPages/Workflows/WorkflowEditModal.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-    x:Class="Automation.App.Views.WorkPages.Workflows.WorkflowEdit"
+    x:Class="Automation.App.Views.WorkPages.Workflows.WorkflowEditModal"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -10,7 +10,7 @@
     MinHeight="100"
     MinWidth="250"
     Padding="2">
-    <StackPanel Orientation="Vertical" DataContext="{Binding Workflow, RelativeSource={RelativeSource AncestorType=local:WorkflowEdit}}">
+    <StackPanel Orientation="Vertical" DataContext="{Binding Workflow, RelativeSource={RelativeSource AncestorType=local:WorkflowEditModal}}">
         <TextBlock Margin="0,0,0,4">Name</TextBlock>
         <TextBox Text="{Binding Name}" />
         <GroupBox
