--- a/Automation/Automation.App/Views/WorkPages/Workflows/Editor/WorkflowEditorGraph.xaml
+++ b/Automation/Automation.App/Views/WorkPages/Workflows/Editor/WorkflowEditorGraph.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-    x:Class="Automation.App.Views.WorkPages.Workflows.WorkflowGraph"
+    x:Class="Automation.App.Views.WorkPages.Workflows.Editor.WorkflowEditorGraph"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -153,70 +153,5 @@
         </nodify:NodifyEditor>
         <Grid Background="{StaticResource LargeGridLinesDrawingBrush}" Panel.ZIndex="-2" />
 
-        <Border
-            VerticalAlignment="Bottom"
-            HorizontalAlignment="Left"
-            Margin="2"
-            CornerRadius="{StaticResource {x:Static adonisUi:Dimensions.CornerRadius}}"
-            BorderThickness="{StaticResource {x:Static adonisUi:Dimensions.BorderThickness}}"
-            Background="{DynamicResource {x:Static adonisUi:Brushes.Layer0BackgroundBrush}}"
-            BorderBrush="{DynamicResource {x:Static adonisUi:Brushes.Layer1BorderBrush}}">
-            <StackPanel>
-                <Button
-                    Style="{StaticResource IconButton}"
-                    Click="ButtonZoomIn_Click"
-                    ToolTip="Zoom in">
-                    <fonts:Icon Text="{x:Static fonts:IconFont.Plus}" />
-                </Button>
-                <Button
-                    Style="{StaticResource IconButton}"
-                    Click="ButtonZoomOut_Click"
-                    ToolTip="Zoom out">
-                    <fonts:Icon Text="{x:Static fonts:IconFont.Minus}" />
-                </Button>
-                <Button
-                    Style="{StaticResource IconButton}"
-                    Click="ButtonZoomFit_Click"
-                    ToolTip="Fit nodes to screen">
-                    <fonts:Icon Text="{x:Static fonts:IconFont.Expand}" />
-                </Button>
-                <ToggleButton
-                    Style="{StaticResource IconToggleButton}"
-                    ToolTip="Allow snaping"
-                    Click="ToggleButtonSnapping_Click">
-                    <fonts:Icon Text="{x:Static fonts:IconFont.TableCells}" />
-                </ToggleButton>
-            </StackPanel>
-        </Border>
-
-        <Border
-            VerticalAlignment="Bottom"
-            HorizontalAlignment="Right"
-            Margin="2"
-            CornerRadius="{StaticResource {x:Static adonisUi:Dimensions.CornerRadius}}"
-            BorderThickness="{StaticResource {x:Static adonisUi:Dimensions.BorderThickness}}"
-            Background="{DynamicResource {x:Static adonisUi:Brushes.Layer0BackgroundBrush}}"
-            BorderBrush="{DynamicResource {x:Static adonisUi:Brushes.Layer1BorderBrush}}">
-            <StackPanel Orientation="Horizontal">
-                <Button
-                    Style="{StaticResource IconButton}"
-                    Click="ButtonAdd_Click"
-                    ToolTip="Add node">
-                    <fonts:Icon Text="{x:Static fonts:IconFont.Plus}" />
-                </Button>
-                <Button
-                    Style="{StaticResource IconButton}"
-                    Click="ButtonGroup_Click"
-                    ToolTip="Group selected nodes">
-                    <fonts:Icon Text="{x:Static fonts:IconFont.ObjectGroup}" />
-                </Button>
-                <Button
-                    Style="{StaticResource IconButton}"
-                    Click="ButtonDelete_Click"
-                    ToolTip="Delete selection">
-                    <fonts:Icon Text="{x:Static fonts:IconFont.Trash}" />
-                </Button>
-            </StackPanel>
-        </Border>
     </Grid>
 </UserControl>
