--- a/Automation/Automation.App/Views/WorkPages/Workflows/Editor/WorkflowEditorHelp.xaml
+++ b/Automation/Automation.App/Views/WorkPages/Workflows/Editor/WorkflowEditorHelp.xaml
@@ -8,7 +8,5 @@
     mc:Ignorable="d"
     d:DesignHeight="450"
     d:DesignWidth="800">
-    <Grid>
-        <TextBlock>Help</TextBlock>
-    </Grid>
+    <Grid />
 </UserControl>
