--- a/Automation/Automation.App/Views/WorkPages/Workflows/Editor/GraphEditor.xaml
+++ b/Automation/Automation.App/Views/WorkPages/Workflows/Editor/GraphEditor.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-    x:Class="Automation.App.Views.WorkPages.Workflows.Editor.WorkflowEditor"
+    x:Class="Automation.App.Views.WorkPages.Workflows.Editor.GraphEditor"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -9,7 +9,7 @@
     d:DesignHeight="450"
     d:DesignWidth="800">
     <Grid>
-        <local:WorkflowEditorGraph />
-        <local:WorkflowEditorOverlay />
+        <local:GraphEditorCanvas />
+        <local:GraphEditorOverlay />
     </Grid>
 </UserControl>
