--- a/Automation/Automation.App/Views/WorkPages/Workflows/Editor/GraphEditorCanvas.xaml
+++ b/Automation/Automation.App/Views/WorkPages/Workflows/Editor/GraphEditorCanvas.xaml
@@ -1,91 +1,92 @@
 ﻿<UserControl
-    x:Class="Automation.App.Views.WorkPages.Workflows.Editor.WorkflowEditorGraph"
+    x:Class="Automation.App.Views.WorkPages.Workflows.Editor.GraphEditorCanvas"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
+    xmlns:appViewmodels="clr-namespace:Automation.App.ViewModels.Workflow.Editor"
+    xmlns:converters="clr-namespace:Automation.App.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:data="clr-namespace:Automation.Shared.Data;assembly=Automation.Shared"
+    xmlns:fonts="clr-namespace:Joufflu.Shared.Resources.Fonts;assembly=Joufflu.Shared"
+    xmlns:local="clr-namespace:Automation.App.Views.WorkPages.Workflows.Editor"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:nodify="clr-namespace:Nodify;assembly=Nodify"
-    xmlns:local="clr-namespace:Automation.App.Views.WorkPages.Workflows"
     xmlns:viewmodels="clr-namespace:Automation.App.Shared.ViewModels.Work;assembly=Automation.App.Shared"
-    xmlns:appViewmodels="clr-namespace:Automation.App.ViewModels"
-    xmlns:data="clr-namespace:Automation.Shared.Data;assembly=Automation.Shared"
-    xmlns:converters="clr-namespace:Automation.App.Converters"
-    xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
-    xmlns:fonts="clr-namespace:Joufflu.Shared.Resources.Fonts;assembly=Joufflu.Shared"
-    mc:Ignorable="d">
+    mc:Ignorable="d"
+    x:Name="ContainerElement">
     <UserControl.Resources>
         <GeometryDrawing
             x:Key="SmallGridGeometry"
-            Geometry="M0,0 L0,1 0.03,1 0.03,0.03 1,0.03 1,0 Z"
-            Brush="{StaticResource NodifyEditor.SelectionRectangleBackgroundBrush}" />
+            Brush="{StaticResource NodifyEditor.SelectionRectangleBackgroundBrush}"
+            Geometry="M0,0 L0,1 0.03,1 0.03,0.03 1,0.03 1,0 Z" />
 
         <GeometryDrawing
             x:Key="LargeGridGeometry"
-            Geometry="M0,0 L0,1 0.015,1 0.015,0.015 1,0.015 1,0 Z"
-            Brush="{StaticResource NodifyEditor.SelectionRectangleBackgroundBrush}" />
+            Brush="{StaticResource NodifyEditor.SelectionRectangleBackgroundBrush}"
+            Geometry="M0,0 L0,1 0.015,1 0.015,0.015 1,0.015 1,0 Z" />
 
         <DrawingBrush
             x:Key="SmallGridLinesDrawingBrush"
+            Drawing="{StaticResource SmallGridGeometry}"
             TileMode="Tile"
-            ViewportUnits="Absolute"
+            Transform="{Binding ViewportTransform, ElementName=NodifyEditorElement}"
             Viewport="0 0 20 20"
-            Transform="{Binding ViewportTransform, ElementName=Editor}"
-            Drawing="{StaticResource SmallGridGeometry}" />
+            ViewportUnits="Absolute" />
 
         <DrawingBrush
             x:Key="LargeGridLinesDrawingBrush"
-            TileMode="Tile"
-            ViewportUnits="Absolute"
+            Drawing="{StaticResource LargeGridGeometry}"
             Opacity="0.5"
+            TileMode="Tile"
+            Transform="{Binding ViewportTransform, ElementName=NodifyEditorElement}"
             Viewport="0 0 100 100"
-            Transform="{Binding ViewportTransform, ElementName=Editor}"
-            Drawing="{StaticResource LargeGridGeometry}" />
+            ViewportUnits="Absolute" />
 
         <ControlTemplate x:Key="FlowConnector" TargetType="Control">
             <Polygon
                 Width="12"
                 Height="14"
+                Fill="{TemplateBinding Background}"
                 Points="1,13 11,7 1,1"
+                Stroke="{TemplateBinding BorderBrush}"
                 StrokeDashCap="Round"
+                StrokeEndLineCap="Round"
                 StrokeLineJoin="Round"
                 StrokeStartLineCap="Round"
-                StrokeEndLineCap="Round"
-                Stroke="{TemplateBinding BorderBrush}"
-                Fill="{TemplateBinding Background}"
                 StrokeThickness="2" />
         </ControlTemplate>
 
     </UserControl.Resources>
-    <Grid DataContext="{Binding EditorData, RelativeSource={RelativeSource AncestorType={x:Type local:WorkflowGraph}}}" Background="{StaticResource NodifyEditor.BackgroundBrush}">
+    <Grid Background="{StaticResource NodifyEditor.BackgroundBrush}" DataContext="{Binding Editor, ElementName=ContainerElement}">
         <nodify:NodifyEditor
-            x:Name="Editor"
-            SelectedItems="{Binding SelectedNodes}"
+            x:Name="NodifyEditorElement"
             Background="{StaticResource SmallGridLinesDrawingBrush}"
-            ItemsSource="{Binding Workflow.Nodes}"
-            Connections="{Binding Workflow.Connections}"
+            Connections="{Binding Graph.Connections}"
+            DisconnectConnectorCommand="{Binding DisconnectConnectorCommand}"
+            ItemsSource="{Binding Graph.Nodes}"
             PendingConnection="{Binding PendingConnection}"
-            DisconnectConnectorCommand="{Binding DisconnectConnectorCommand}">
+            SelectedItems="{Binding SelectedNodes}">
             <nodify:NodifyEditor.Resources>
-                <DataTemplate DataType="{x:Type viewmodels:NodeGroup}">
+                <DataTemplate DataType="{x:Type viewmodels:GraphGroup}">
                     <nodify:GroupingNode
                         ActualSize="{Binding Size}"
                         Header="{Binding Name}"
                         MovementMode="Group" />
                 </DataTemplate>
 
-                <DataTemplate DataType="{x:Type viewmodels:RelatedTaskNode}">
+                <DataTemplate DataType="{x:Type viewmodels:GraphTask}">
                     <nodify:Node
+                        Header="{Binding Name}"
                         Input="{Binding Node.Inputs}"
-                        Output="{Binding Node.Outputs}"
-                        Header="{Binding Name}">
+                        Output="{Binding Node.Outputs}">
                         <nodify:Node.InputConnectorTemplate>
                             <DataTemplate DataType="{x:Type viewmodels:TaskConnector}">
                                 <nodify:NodeInput
+                                    Anchor="{Binding Anchor, Mode=OneWayToSource}"
                                     Header="{Binding Name}"
-                                    IsConnected="{Binding IsConnected}"
-                                    Anchor="{Binding Anchor, Mode=OneWayToSource}">
+                                    IsConnected="{Binding IsConnected}">
                                     <nodify:NodeInput.Style>
-                                        <Style TargetType="{x:Type nodify:NodeInput}" BasedOn="{StaticResource {x:Type nodify:NodeInput}}">
+                                        <Style BasedOn="{StaticResource {x:Type nodify:NodeInput}}" TargetType="{x:Type nodify:NodeInput}">
                                             <Style.Triggers>
                                                 <DataTrigger Binding="{Binding Type}" Value="{x:Static data:EnumTaskConnectorType.Flow}">
                                                     <Setter Property="ConnectorTemplate" Value="{StaticResource FlowConnector}" />
@@ -100,11 +101,11 @@
                         <nodify:Node.OutputConnectorTemplate>
                             <DataTemplate DataType="{x:Type viewmodels:TaskConnector}">
                                 <nodify:NodeOutput
+                                    Anchor="{Binding Anchor, Mode=OneWayToSource}"
                                     Header="{Binding Name}"
-                                    IsConnected="{Binding IsConnected}"
-                                    Anchor="{Binding Anchor, Mode=OneWayToSource}">
+                                    IsConnected="{Binding IsConnected}">
                                     <nodify:NodeOutput.Style>
-                                        <Style TargetType="{x:Type nodify:NodeOutput}" BasedOn="{StaticResource {x:Type nodify:NodeOutput}}">
+                                        <Style BasedOn="{StaticResource {x:Type nodify:NodeOutput}}" TargetType="{x:Type nodify:NodeOutput}">
                                             <Style.Triggers>
                                                 <DataTrigger Binding="{Binding Type}" Value="{x:Static data:EnumTaskConnectorType.Flow}">
                                                     <Setter Property="ConnectorTemplate" Value="{StaticResource FlowConnector}" />
@@ -125,10 +126,10 @@
                 </Style>
             </nodify:NodifyEditor.ItemContainerStyle>
             <nodify:NodifyEditor.ConnectionTemplate>
-                <DataTemplate DataType="{x:Type viewmodels:TaskConnection}">
+                <DataTemplate DataType="{x:Type viewmodels:GraphConnection}">
                     <nodify:Connection Source="{Binding Source.Anchor}" Target="{Binding Target.Anchor}">
                         <nodify:Connection.Style>
-                            <Style TargetType="{x:Type nodify:Connection}" BasedOn="{StaticResource {x:Type nodify:Connection}}">
+                            <Style BasedOn="{StaticResource {x:Type nodify:Connection}}" TargetType="{x:Type nodify:Connection}">
                                 <Style.Triggers>
                                     <DataTrigger Binding="{Binding Source.Type}" Value="{x:Static data:EnumTaskConnectorType.Data}">
                                         <Setter Property="ArrowEnds" Value="None" />
@@ -143,14 +144,14 @@
                 </DataTemplate>
             </nodify:NodifyEditor.ConnectionTemplate>
             <nodify:NodifyEditor.PendingConnectionTemplate>
-                <DataTemplate DataType="{x:Type appViewmodels:TaskPendingConnection}">
+                <DataTemplate DataType="{x:Type appViewmodels:GraphPendingConnection}">
                     <nodify:PendingConnection
-                        StartedCommand="{Binding StartCommand}"
+                        AllowOnlyConnectors="True"
                         CompletedCommand="{Binding FinishCommand}"
-                        AllowOnlyConnectors="True" />
+                        StartedCommand="{Binding StartCommand}" />
                 </DataTemplate>
             </nodify:NodifyEditor.PendingConnectionTemplate>
         </nodify:NodifyEditor>
-        <Grid Background="{StaticResource LargeGridLinesDrawingBrush}" Panel.ZIndex="-2" />
+        <Grid Panel.ZIndex="-2" Background="{StaticResource LargeGridLinesDrawingBrush}" />
     </Grid>
 </UserControl>
