--- a/Automation/Automation.App/Views/WorkPages/Workflows/Editor/GraphEditorHelp.xaml
+++ b/Automation/Automation.App/Views/WorkPages/Workflows/Editor/GraphEditorHelp.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-    x:Class="Automation.App.Views.WorkPages.Workflows.Editor.WorkflowEditorHelp"
+    x:Class="Automation.App.Views.WorkPages.Workflows.Editor.GraphEditorHelp"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
