--- a/Automation/Automation.App/Views/WorkPages/Scopes/Components/ScopedContextMenu.xaml
+++ b/Automation/Automation.App/Views/WorkPages/Scopes/Components/ScopedContextMenu.xaml
@@ -10,13 +10,14 @@
     xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
     mc:Ignorable="d"
     d:DesignHeight="450"
-    d:DesignWidth="800">
-    <MenuItem Header="Add">
+    d:DesignWidth="800"
+    x:Name="ContainerElement">
+    <MenuItem Header="Add" DataContext="{Binding ElementName=ContainerElement}">
         <MenuItem.Style>
             <Style TargetType="MenuItem" BasedOn="{StaticResource {x:Type MenuItem}}">
                 <Setter Property="Visibility" Value="Collapsed" />
                 <Style.Triggers>
-                    <DataTrigger Binding="{Binding Selected.Type, RelativeSource={RelativeSource AncestorType=local:ScopedContextMenu}}" Value="Scope">
+                    <DataTrigger Binding="{Binding Selected.Type}" Value="Scope">
                         <Setter Property="Visibility" Value="Visible" />
                     </DataTrigger>
                 </Style.Triggers>
@@ -25,23 +26,23 @@
         <MenuItem.Icon>
             <fonts:Icon Text="{x:Static fonts:IconFont.Plus}" />
         </MenuItem.Icon>
-        <MenuItem Header="Add scope" Command="{Binding AddScopeCommand, RelativeSource={RelativeSource AncestorType=local:ScopedContextMenu}}">
+        <MenuItem Header="Add scope" Command="{Binding AddScopeCommand}">
             <MenuItem.Icon>
                 <components:NodeIcon Type="Scope" Margin="0,0,4,0" />
             </MenuItem.Icon>
         </MenuItem>
-        <MenuItem Header="Add workflow" Command="{Binding AddWorkflowCommand, RelativeSource={RelativeSource AncestorType=local:ScopedContextMenu}}">
+        <MenuItem Header="Add workflow" Command="{Binding AddWorkflowCommand}">
             <MenuItem.Icon>
                 <components:NodeIcon Type="Workflow" Margin="0,0,4,0" />
             </MenuItem.Icon>
         </MenuItem>
-        <MenuItem Header="Add task" Command="{Binding AddTaskCommand, RelativeSource={RelativeSource AncestorType=local:ScopedContextMenu}}">
+        <MenuItem Header="Add task" Command="{Binding AddTaskCommand}">
             <MenuItem.Icon>
                 <components:NodeIcon Type="Task" Margin="0,0,4,0" />
             </MenuItem.Icon>
         </MenuItem>
     </MenuItem>
-    <MenuItem Header="Remove" Command="{Binding RemoveSelectedCommand, RelativeSource={RelativeSource AncestorType=local:ScopedContextMenu}}">
+    <MenuItem Header="Remove" Command="{Binding RemoveSelectedCommand, ElementName=ContainerElement}">
         <MenuItem.Icon>
             <fonts:Icon Text="{x:Static fonts:IconFont.Trash}" Foreground="{DynamicResource {x:Static adonisUi:Brushes.ErrorBrush}}" />
         </MenuItem.Icon>
